--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postversion": "git push && git push --tags"
   },
   "keywords": [
-    "lazy", "typescript"
+    "lazy",
+    "typescript"
   ],
   "bugs": {
     "url": "https://github.com/gadpetrovich/lazylib/issues"
@@ -29,6 +30,12 @@
     "browserify": "latest"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
+    "@jest/globals": "^29.5.0",
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
