--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
     "module": "CommonJS",
     "declaration": true,
     "outDir": "./lib",
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["./src/*"],
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
