--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
       "@src*": ["src/*"]
     }
   },
-  "include": ["src", "**/.ts"],
+  "include": ["src", "__tests__", "**/.ts"],
   "exclude": ["lib", "node_modules", "**/__tests__/*"]
 }
