--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lazylib",
   "author": "Шарапов Павел, subber@yandex.ru",
   "description": "Реализация ленивых вычислений в typescript",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "./lib/main.js",
   "types": "./lib/main.d.ts",
   "scripts": {
@@ -24,6 +24,10 @@
     "url": "https://github.com/gadpetrovich/lazylib/issues"
   },
   "homepage": "https://github.com/gadpetrovich/lazylib#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gadpetrovich/lazylib.git"
+  },
   "license": "MIT",
   "dependencies": {
     "@types/browserify": "latest",
