--- a/package.json
+++ b/package.json
@@ -5,6 +5,16 @@
   "version": "0.1.2",
   "main": "./lib/main.js",
   "types": "./lib/main.d.ts",
+  "files": [
+    "./lib"
+  ],
+  "publishConfig": {
+    "ignore": [
+      "!lib",
+      "src/",
+      "__test__"
+    ]
+  },
   "scripts": {
     "test": "jest",
     "build": "tsc",
@@ -14,7 +24,8 @@
     "prepublishOnly": "yarn test && yarn run lint",
     "preversion": "yarn run lint",
     "version": "yarn run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "prepack": "npmignore --auto"
   },
   "keywords": [
     "lazy",
@@ -50,6 +61,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.5.0",
+    "npmignore": "^0.3.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
