--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "tsc",
+    "build": "webpack --config webpack.config.ts",
     "format": "prettier --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
     "lint": "eslint -c .eslintrc.js --ext .ts src __tests__",
     "prepare": "yarn run build",
@@ -40,15 +40,14 @@
     "url": "https://github.com/gadpetrovich/lazylib.git"
   },
   "license": "MIT",
-  "dependencies": {
-    "@types/browserify": "latest",
-    "browserify": "latest"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-typescript": "^7.21.4",
     "@jest/globals": "^29.5.0",
     "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "^8.38.0",
@@ -64,6 +63,10 @@
     "npmignore": "^0.3.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1"
   }
 }
