--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "CommonJS",
+    "module": "ESNext",
     "moduleResolution": "node",
+    "sourceMap": true,
     "declaration": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "outDir": "./lib",
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -11,6 +14,11 @@
     "baseUrl": ".",
     "paths": {
       "@src*": ["src/*"]
+    }
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
     }
   },
   "include": ["src", "__tests__", "**/.ts"],
