--- a/package.json
+++ b/package.json
@@ -3,8 +3,21 @@
   "author": "Шарапов Павел, subber@yandex.ru",
   "description": "Реализация ленивых вычислений в typescript",
   "version": "0.1.3",
-  "main": "./lib/main.js",
-  "types": "./lib/main.d.ts",
+  "type": "commonjs",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
+      },
+      "require": {
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
+      }
+    }
+  },
+  "types": "./lib/index.d.ts",
+  "main": "./lib/index.js",
   "files": [
     "./lib"
   ],
