--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "printWidth": 120,
+  "printWidth": 100,
   "singleQuote": true,
   "arrowParens": "avoid",
   "bracketSpacing": true,
   "semi": true,
-  "bracketSameLine": true
+  "bracketSameLine": true,
+  "trailingComma": "all"
 }
