--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "webpack --config webpack.config.ts",
+    "build": "webpack --config webpack.config.ts --progress",
     "format": "prettier --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
     "lint": "eslint -c .eslintrc.js --ext .ts src __tests__",
+    "typeCheck": "tsc --noEmit --skipLibCheck",
     "prepare": "yarn run build",
-    "prepublishOnly": "yarn test && yarn run lint",
+    "prepublishOnly": "yarn test && yarn run lint && yarn run typeCheck",
     "preversion": "yarn run lint",
     "version": "yarn run format && git add -A src",
     "postversion": "git push && git push --tags",
@@ -67,6 +68,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-eslint-plugin": "^5.0.8",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
@@ -75,6 +77,7 @@
     "jest": "^29.5.0",
     "npmignore": "^0.3.0",
     "prettier": "^2.8.7",
+    "readme-md": "^0.13.1",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
