--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "noImplicitAny": true,
     "baseUrl": ".",
     "paths": {
-      "@src*": ["src/*"]
+      "@/*": ["src/*"]
     }
   },
   "ts-node": {
