Добавил генератор README.md

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
     "lint": "eslint -c .eslintrc.js --ext .ts src __tests__",
     "typeCheck": "tsc --noEmit --skipLibCheck",
+    "readme": "readme-md >README.md",
     "prepare": "yarn run build",
     "prepublishOnly": "yarn test && yarn run lint && yarn run typeCheck",
     "preversion": "yarn run lint",
@@ -78,6 +79,7 @@
     "npmignore": "^0.3.0",
     "prettier": "^2.8.7",
     "readme-md": "^0.13.1",
+    "readme-md-cli": "^0.13.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
