--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts-lazy-lib",
   "author": "Шарапов Павел, subber@yandex.ru",
   "description": "Реализация ленивых вычислений в typescript",
-  "version": "0.2.0-dev.1",
+  "version": "0.2.0",
   "type": "commonjs",
   "exports": {
     ".": {
